2008-04-07  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c: clean up.

	* src/im-chooser-simple.c (_im_chooser_simple_update_im_list):
	don't update the IM list if no IM is available. (RH#440519)

2008-03-26  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: real fix to not update .xinputrc.

2008-03-19  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: Add XIM support.

2008-03-17  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: Do not update .xinputrc here. just follow
	the default behavior on current locale and settings.

2008-03-11  Akira TAGOH  <tagoh@redhat.com>

	* data/none.in.in (IMSETTINGS_IGNORE_ME): Use new one instead of
	IM_CHOOSER_IGNORE_ME which is obsolete.

	* src/im-chooser-simple.c (im_chooser_simple_destroy_idle_cb): new.
	(im_chooser_simple_enable_im_on_toggled): serialize actions to work on
	imsettings asynchronously.
	(im_chooser_simple_im_list_on_changed): likewise.
	(_action_new): new.
	(_action_free): new.
	(_action_compare): new.
	(im_chooser_simple_im_start_cb): new.
	(im_chooser_simple_im_stop_cb): new.
	(im_chooser_simple_show_progress): new.
	(im_chooser_simple_action_loop): new.
	(im_chooser_simple_set_property): new.
	(im_chooser_simple_get_property): new.
	(_im_chooser_simple_update_im_list): Use i_r_get_current_user/system_im
	instead of _is_user/system_im to improve the performance.

	* src/main.c (main): set a parent window.

	* configure.ac: Apply the cflags for warnings.

2008-03-06  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: Use gnome-common's macro.

2008-02-20  Akira TAGOH  <tagoh@redhat.com>

	* data/xinputinfo.sh.in: Fix to output quoted strings properly.

2008-02-19  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: Add a hack to ensure starting the user specific
	xinput script.

	* configure.ac: Make sure gamin is installed.

	* src/im-chooser-simple.c (im_chooser_simple_enable_im_on_toggled):
	Update the list on toggling IM feature activation.