@@ -1,3 +1,7 @@
+2008-04-10  Akira TAGOH  <tagoh@redhat.com>
+
+	* data/xinput.sh.in.in: Add settings for XIM support.
+
 2008-04-07  Akira TAGOH  <tagoh@redhat.com>
 
 	* src/im-chooser-simple.c: clean up.
